# par-monad-experiments

./: README.md  makefile  par-monad-experiments.cabal
app/: Main.hs
src/: Lib.hs
